align social widgets correctly in Opera 11

--- a/_widget.scss
+++ b/_widget.scss
@@ -230,6 +230,11 @@ body.debug {
   > span {
     display: block !important;
     float: left !important;
+    height: 20px !important;
+  }
+
+  iframe {
+    vertical-align: baseline !important;
   }
 }
 
